# Shortcut-Key-Map

./: .gitignore  LICENSE  README.md  README_EN.md  package-lock.json  package.json  vite.config.ts
docs/: implementation-plan.md  regression-checklist.md
scripts/: verify.sh
src/: App.vue  api.ts  i18n.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ShortcutInput.vue
src/utils/: hotkey.ts
