[package]
name = "shortcut_key_map_app"
version = "0.1.0"
description = "Shortcut key memory desktop app"
authors = ["daoying"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shortcut_key_map_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
